# MultiVision

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/config/: models.ts
frontend/src/services/: modelService.ts
frontend/src/types/: model.ts
gui/: __init__.py  main.py
multivision/: asgi.py  settings.py  urls.py  wsgi.py
static/: index.html
static/assets/: index-DYJqBQL7.css  index-Dl6Rnz6t.js
templates/vision/: index.html
vision/: __init__.py  apps.py  models_handler.py  urls.py  views.py
